getUser swagger
